change online certificates template

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section id="home">
         <header>
-            <h2><a href="#" class="logo">logo</a></h2>
+            <!-- <h2><a href="#" class="logo">logo</a></h2> -->
             <div class="navigation">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
@@ -39,39 +39,39 @@
             <h2>Online Certificates</h2><br />
             <div class="certificate_content">
                 <div class="course_card">
+                    <img src="images/coursera.png" width="100%" height="150px">
                     <a
                         href="https://www.coursera.org/account/accomplishments/verify/UMXQ84Z5L97Y?utm_source=ln&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course">
                         <p>Amazon DynamoDB: Building NoSQL Database-Driven Applications</p>
                     </a>
-                    <img src="images/coursera.png" width="100%" height="100px">
                 </div>
                 <div class="course_card">
+                    <img src="images/coursera.png" width="100%" height="150px">
                     <a
                         href="https://www.coursera.org/account/accomplishments/verify/729HKEFBXKQH?utm_source=ln&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course">
                         <p>Structuring Machine Learning Projects</p>
                     </a>
-                    <img src="images/coursera.png" width="100%" height="100px">
                 </div>
                 <div class="course_card">
+                    <img src="images/datacamp.png" width="100%" height="150px">
                     <a
                         href="https://www.datacamp.com/statement-of-accomplishment/course/33d02ac07c8fe161db9fff91257f882a2bbcc2f4">
                         <p>Python Data Science Toolbox (Part 1)</p>
                     </a>
-                    <img src="images/datacamp.png" width="100%" height="100px">
                 </div>
                 <div class="course_card">
+                    <img src="images/datacamp.png" width="100%" height="150px">
                     <a
                         href="https://www.datacamp.com/statement-of-accomplishment/course/ee71227cb072a6d2b946e2f6c50870a213c3c440">
                         <p>Intermediate Python</p>
                     </a>
-                    <img src="images/datacamp.png" width="100%" height="100px">
                 </div>
                 <div class="course_card">
+                    <img src="images/datacamp.png" width="100%" height="150px">
                     <a
                         href="https://www.datacamp.com/statement-of-accomplishment/course/37934d6ec0db3ea37c8ab78db28041291a710c80">
                         <p>Introduction to Python</p>
                     </a>
-                    <img src="images/datacamp.png" width="100%" height="100px">
                 </div>
             </div>
         </div>
