Update html file
remove about image

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </div>
     </section>
     <section id="about">
-        <div class="content">
+<!--         <div class="content">
             <div class="image">
                 <img src="images/4.jpg" />
             </div>
-        </div>
+        </div> -->
     </section>
     <section id="certificates">
         <div class="online_certificates">
