--- a/index.html
+++ b/index.html
@@ -13,18 +13,26 @@
 <body>
     <section id="home">
         <header>
-            <!-- <h2><a href="#" class="logo">logo</a></h2> -->
-            <div class="navigation">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#certificates">Certificates</a>
-                <a href="#projects">Projects</a>
+            <div class="nameline">
+                <p class="name">MINOLI PADMAKANTHI</p>
+                <p class="slogan">Learning to program and a tech enthusiastic...</p>
             </div>
         </header>
+        <div class="navigation">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#certificates">Certificates</a>
+            <a href="#projects">Projects</a>
+        </div>
+        <div class="image">
+            <img src="images/image_2.png" />
+        </div>
+        <a href="#projects"><button class="view-button">View My Work</button></a>
         <div class="links">
-            <a href="https://www.linkedin.com/in/minoli-padmakanthi/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/110min"><i class="fab fa-github-square"></i></a>
             <a href="https://www.hackerrank.com/minoli?hr_r=1"><i class="fab fa-hackerrank"></i></a>
+            <a href="https://www.linkedin.com/in/minoli-padmakanthi/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://minoli110.medium.com/"><i class="fab fa-medium"></i></a>
         </div>
     </section>
     <section id="about">
