modified home page with alignment

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <div class="image">
             <img src="images/image_2.png" />
         </div>
-        <a href="#projects"><button class="view-button">View My Work</button></a>
+        <div class="view-more-parent">
+            <a href="#projects"><button class="view-button">View My Work</button></a>
+        </div>
         <div class="links">
             <a href="https://github.com/110min"><i class="fab fa-github-square"></i></a>
             <a href="https://www.hackerrank.com/minoli?hr_r=1"><i class="fab fa-hackerrank"></i></a>
