about section added with animation

--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
         </div>
     </section>
     <section id="about">
-<!--         <div class="content">
-            <div class="image">
-                <img src="images/4.jpg" />
-            </div>
-        </div> -->
+        <div class="about-image">
+            <!-- <img src="images/image_4.jpg"> -->
+        </div>
+        <div class="about-content">
+            <p class="about-heading">Hey, It's Minoli</p>
+            <p class="about-description">A self-motivated, dedication, enthusiastic, reliable, and hardworking IT
+                Undergraduate who is learning different programming styles, trying out various technologies and 
+                frameworks and an entry level blogger.
+            </p>
+        </div>
     </section>
     <section id="certificates">
         <div class="online_certificates">
