about section paragaraph modification

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="about-heading">Hey, It's Minoli</p>
             <p class="about-description">A self-motivated, dedication, enthusiastic, reliable, and hardworking IT
                 Undergraduate who is learning different programming styles, trying out various technologies and 
-                frameworks and an entry level blogger.
+                frameworks. And an entry level blogger.
             </p>
         </div>
     </section>
