modified project section

--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
     </section>
     <section id="projects">
         <div class="project">
-            <h2>My Work</h2><br />
+            <h2>MY WORK</h2><br />
             <div class="project_content">
                 <div class="card">
-                    <img src="images/project2.PNG" width="100%" height="250px">
-                    <p>This is a responsive website implemented using html, css and javascript. An example landing page
+                    <img src="images/project2.PNG" width="100%" height="100px">
+                    <!-- <p>This is a responsive website implemented using html, css and javascript. An example landing page
                         for cofee shop. This is only an example design implemented with fake details of the cofee shop.
-                        The application provide some detail description about the example shop.</p>
+                        The application provide some detail description about the example shop.</p> -->
                     <p><a href="https://focused-volhard-2b4a1f.netlify.app/" class="card_link">Visit Site</a></p>
                 </div>
                 <div class="card">
-                    <img src="images/project1.PNG" width="100%" height="250px">
-                    <p>Use Reactjs as the frontend framework. Get recipie details with Suggestic GraphQL API.
+                    <img src="images/project1.PNG" width="100%" height="100px">
+                    <!-- <p>Use Reactjs as the frontend framework. Get recipie details with Suggestic GraphQL API.
                         The application has capable of providing custom meal plans. After entering the number
                         of calory level, number of carbohydrates, protein, fats levels and number of days that
                         need meal plan it outputs the meal plans for particular days.
-                    </p>
+                    </p> -->
                     <p><a href="https://inspiring-williams-e8d713.netlify.app/" class="card_link">Visit Site</a></p>
                 </div>
             </div>
