--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <p><a href="https://inspiring-williams-e8d713.netlify.app/" class="card_link">Visit Site</a></p>
                 </div>
                 <div class="card">
-                    <img src="images/project3.PNG" width="100%" height="100px">
+                    <img src="images/project3.png" width="100%" height="100px">
                     <p><a href="https://react-node-sc.herokuapp.com/" class="card_link">Visit Site</a></p>
                 </div>
                 <div class="card">
